Bug 1023041 - Part 2: Generate correct event when dragging touch caret. r=roc